iac/14-certificate-management/iks-ingress-certificate/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: movies
  name: movies
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: movies
  type: ClusterIP
